// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests should create a cat 1`] = `
Object {
  "data": Object {
    "createCat": Object {
      "breed": "PERSIAN",
      "id": "1",
      "lastname": "Nepomuceno",
      "name": "Jonas",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should error when no cat 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Variable "$id" of type "String!" used in position expecting type "ID!".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should fetch all cat 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field Cat.id.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should fetch one cat 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Variable "$id" of type "String!" used in position expecting type "ID!".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should update a cat 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [GraphQLError: Variable "$cat" of required type "UpdateCatInput!" was not provided.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
